Fix spacing for nav button

--- a/app/css/cm.css
+++ b/app/css/cm.css
@@ -6,7 +6,7 @@
 
 .navbar-right {
     margin-right: 15px;
-    margin-top: 10px;
+    margin-top: 8px;
 }
 
 .dropdown-menu a.active {
